pset5: homepage: solution

--- a/5/homepage/types.html
+++ b/5/homepage/types.html
@@ -33,21 +33,40 @@
         </tr>
     </table>
     <h1>
-        What is Translation?
+        What are the of Translation?
     </h1>
     <h4>
-        Translation is the communication of the meaning of a source-language text by means of an equivalent
-        target-language text.
+        Translation has many types:
     </h4>
-    <p>
-        The English language draws a terminological distinction (not all languages do) between translating (a written
-        text) and interpreting (oral or sign-language communication between users of different languages); under this
-        distinction, translation can begin only after the appearance of writing within a language community.
-        <a href="about.html">Learn More</a>
-    </p>
-    <div class="alert alert-primary" role="alert">
-        A translator must have many attributes, Check it <a href="translators.html">here!</a>
-    </div>
+    <ul>
+        <li>
+            <b>Legal</b>
+        </li>
+        <li>
+            Literary
+        </li>
+        <li>
+            Linguistic
+        </li>
+        <li>
+            Validation
+        </li>
+        <li>
+            Medical
+        </li>
+        <li>
+            Regulatory
+        </li>
+        <li>
+            Technical
+        </li>
+        <li>
+            Interpretation
+        </li>
+        <li>
+            Cultural
+        </li>
+    </ul>
 </body>
 
 </html>
